<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.expedia.bookings.widget.TextView
            android:id="@+id/card_processing_fee"
            style="@style/FlightWarningBar"
            android:singleLine="true"
            android:visibility="gone" />

        <com.expedia.bookings.widget.TextView
            android:id="@+id/flights_debit_cards_not_accepted"
            style="@style/FlightWarningBar"
            android:text="@string/flights_debit_cards_not_accepted"
            android:singleLine="true"
            android:visibility="gone" />

        <com.expedia.bookings.widget.FrameLayout
            android:id="@+id/handle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/gray1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.expedia.bookings.widget.TextView
                    android:id="@+id/view_trip_details"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:text="@string/trip_overview"
                    android:textSize="16sp"
                    app:textStyle="medium"
                    android:contentDescription="@string/trip_overview_cont_desc"/>

                <ImageView
                    android:id="@+id/chevron"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_chevron_up_black_48dp"
                    android:tint="@color/package_bundle_icon_color" />

            </LinearLayout>

        </com.expedia.bookings.widget.FrameLayout>

        <com.expedia.bookings.widget.ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray1">

            <LinearLayout
                android:id="@+id/checkout_widget_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.expedia.bookings.widget.AccountButton
                    android:id="@+id/login_widget"
                    style="?attr/checkout_card_view_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/card_view_container_margin"
                    android:layout_marginRight="@dimen/card_view_container_margin"
                    android:orientation="vertical" />

                <!--This has a hardcoded string FYI-->
                <LinearLayout
                    android:id="@+id/hint_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/card_view_container_margin"
                    android:layout_marginLeft="11dp"
                    android:layout_marginRight="11dp"
                    android:layout_marginTop="@dimen/card_view_container_margin"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="9dp"
                        android:layout_weight="1"
                        android:background="#979797" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/or"
                        android:textColor="@color/defaultTextColor" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="9dp"
                        android:layout_weight="1"
                        android:background="#979797" />

                </LinearLayout>

                <com.expedia.bookings.widget.traveler.TravelerDefaultState
                    android:id="@+id/traveler_default_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_view_container_margin"
                    android:layout_marginRight="@dimen/card_view_container_margin"
                    android:background="@drawable/card_background" />

                <ViewStub
                    android:id="@+id/payment_info_card_view_stub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_view_container_margin"
                    android:layout_marginRight="@dimen/card_view_container_margin"
                    android:layout_marginTop="12dp"
                    android:fitsSystemWindows="true"
                    android:inflatedId="@+id/payment_info_card_view"
                    android:layout="?attr/paymentWidgetLayout" />

                <!-- Insurance -->
                <com.expedia.bookings.widget.InsuranceWidget
                    android:id="@+id/insurance_widget"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_view_container_margin"
                    android:layout_marginRight="@dimen/card_view_container_margin"
                    android:layout_marginTop="16dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_width="match_parent"
                    android:visibility="gone"/>

                <com.expedia.bookings.widget.TextView
                    android:id="@+id/legal_information_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="@dimen/card_view_container_margin"
                    android:layout_marginTop="16dp"
                    android:linksClickable="true"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/defaultTextColor"
                    android:textSize="10sp" />

                <com.expedia.bookings.widget.TextView
                    android:id="@+id/disclaimer_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="@dimen/card_view_container_margin"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="10sp"
                    android:textColor="@color/defaultTextColor"
                    android:visibility="gone" />


                <com.expedia.bookings.widget.TextView
                    android:id="@+id/deposit_policy_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="@dimen/card_view_container_margin"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="10sp"
                    android:textColor="@color/defaultTextColor"
                    android:visibility="gone" />

                <com.expedia.bookings.widget.TextView
                    android:id="@+id/card_fee_warning_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="@dimen/card_view_container_margin"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="10dp"
                    android:textSize="10sp"
                    android:textColor="@color/defaultTextColor"
                    android:visibility="gone" />

            </LinearLayout>

        </com.expedia.bookings.widget.ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/drop_shadow" />

        <com.expedia.bookings.widget.PriceChangeWidget
            android:id="@+id/price_change"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <com.expedia.bookings.widget.TotalPriceWidget
            android:id="@+id/total_price_widget"
            android:layout_width="match_parent"
            android:layout_height="@dimen/footer_button_height"
            android:background="#FFFFFF"
            android:paddingLeft="19dp"
            android:paddingRight="19dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_gray" />

        <LinearLayout
            android:id="@+id/slide_to_purchase_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FDFDFD"
            android:visibility="invisible"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <com.expedia.bookings.widget.SlideToWidgetLL
                android:id="@+id/slide_to_purchase_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/car_slide_to_purchase_padding"
                android:layout_marginRight="@dimen/car_slide_to_purchase_padding"
                android:background="#FFFFFF" />

            <com.expedia.bookings.widget.TextView
                android:id="@+id/purchase_total_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="?attr/primary_color"
                android:textSize="@dimen/car_slide_to_purchase_price_text_size" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/drop_shadow"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/tb_shadow" />

    <Button
        android:id="@+id/checkout_button"
        style="@style/MaterialFooterButtonText"
        android:layout_width="match_parent"
        android:background="?attr/hotel_select_room_ripple_drawable"
        android:layout_gravity="bottom"
        android:text="@string/Checkout" />

    <com.expedia.bookings.presenter.packages.TravelerPresenter
        android:id="@+id/traveler_presenter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray1"
        android:visibility="gone" />

</merge>
