...
            </android.support.v7.widget.CardView>

            <ViewStub
                android:id="@+id/payment_info_card_view_stub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inflatedId="@+id/payment_info_card_view"
                android:layout_marginTop="12dp"
                android:layout="?attr/paymentWidgetLayout" />

            <FrameLayout
                android:id="@+id/coupon_container"
                android:layout_width="match_parent"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">

        <com.expedia.bookings.widget.CheckoutToolbar
            android:id="@+id/checkout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/primary_color"
            android:minHeight="?attr/actionBarSize"
            app:titleTextAppearance="?attr/toolbar_title_style"
            app:contentInsetStartWithNavigation="0dp" />
...
