<?xml version="1.0" encoding="utf-8"?>
<Button xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/bg_actionbar_button"
    android:drawableLeft="@drawable/ic_action_bar_checkout_arrow"
    android:gravity="center_vertical"
    android:paddingLeft="3dp"
    android:paddingRight="8dp"
    android:text="@string/menu_done"
    android:textColor="#ffeb8b"
    android:textSize="12dp"
    android:textStyle="bold" />
